--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "autoload": {
         "psr-4": {
             "App\\":"App/",
-            "MF\\":"vendor/Mf"
+            "MF\\":"vendor/MF"
         }
     }
 }
